--- a/package.json
+++ b/package.json
@@ -11,5 +11,49 @@
     "angularjs"
   ],
   "author": "Steve Taylor (Avastec)",
-  "license": "ISC"
+  "license": "MIT",
+  "homepage": "http://learnorchard.net",
+  "repository": {
+    "type": "git",
+    "url": "ttps://github.com/stevetayloruk/Learn-Orchard.git"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.9",
+    "gulp-concat": "^2.4.1",
+    "gulp-jshint": "^1.8.5",
+    "gulp-minify-html": "^0.1.6",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-load-plugins": "^0.7.0",
+    "browser-sync": "^1.6.0",
+    "jshint-stylish": "^1.0.0",
+    "gulp-ng-annotate": "^0.3.3",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "gulp-bytediff": "^0.2.0",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-ruby-sass": "^0.7.1",
+    "glob": "^4.0.6",
+    "del": "^0.1.3"
+  },
+  "paths": {
+    "build": "./build/",
+    "css": "./styles/",
+    "sass": "./styles/sass/",
+    "js": "./scripts/"
+  },
+  "files": {
+    "js": [
+        "./scripts/**/*.js"
+    ],
+    "sass": [
+        "./styles/sass/*.scss"
+    ],
+    "css": [
+        "./styles/*.css"
+    ],
+     "clean": [
+        "./styles/*.css",
+        "./build/*.*"
+    ]
+  }
 }
